# stock-strategies-only

./: .env.example  .gitignore  README.md  daily.yml  pyproject.toml  v3_daily_signal.py
.github/workflows/: daily.yml  pyproject.toml
stock_strategies/: config.py  evaluate.py  notify.py
