[project]
name = "stock-strategies-only"
version = "0.1.0"
description = "V3.0 每日選股訊號系統"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.49.2",
    "gspread>=6.2.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[tool.uv.workspace]
members = [
    ".github/workflows",
]
